--- a/sass/drupalforfirebug.scss
+++ b/sass/drupalforfirebug.scss
@@ -1,8 +1,8 @@
 /* Style applied on the panel node.
 
    Rule syntax: .panelNode-<ext-id> */
-.panelNode-drupalforfirebug {
-    padding: 10px;
-    font-size: 12px;
-    font-weight: bold;
+.panelNode-drupalforfirebug,.panelNode-drupalforfirebug iframe html body  {
+  padding: .5em 1ex;
+  font-size: 1.25em;
+  font-family: Helvetica;
 }
