--- a/sass/trace.scss
+++ b/sass/trace.scss
@@ -4,6 +4,10 @@
    
    See: http://getfirebug.com/wiki/index.php/FBTrace for more details */
 .DBG_DRUPALFORFIREBUG {
-  background-color: black;
-  color: green;
+  background-color: #102C17;
+  color: #61ce3c;
+}
+
+.DBG_DRUPALFORFIREBUG:hover {
+  color: #102C17
 }
